--- a/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/Modals/NewRequisition__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/Modals/NewRequisition__Modal.razor
@@ -22,6 +22,7 @@
                                   ConfirmModal="@confirmModal"
                                   OnShowAlert="@_onShowAlertCallback"
                                   IsDisabledBtns="@_isDisabledBtns" 
-                                  SelectedFiles="@Attachments" />
+                                  SelectedFiles="@Attachments"
+                                  BusinessUnitCode="@RequestHeader?.BusinessUnitCode" />
     </div>
 </div>
