--- a/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/RequestDetails__Control.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/RequestDetails__Control.razor
@@ -7,7 +7,8 @@
 
 <!-- Basic Request Information -->
 <Details__Card>
-    <DetailsRow__Card Label="Name" Value="@Request.Name" FullRow="true" />
+    <DetailsRow__Card Label="Name" Value="@Request.Name" />
+    <DetailsRow__Card Label="Business Unit" Value="@Request.BusinessUnitCode"  />
     <DetailsRow__Card Label="Division / Department" Value="@Request.Division_Department" />
     <DetailsRow__Card Label="Nature of Request" Value="@Request.Nature_Of_Request" />
     <DetailsRow__Card Label="Justification" Value="@Request.Justification" FullRow="true" IsValueBreak="true" />
