--- a/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Index.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Requests/JobOrder/JobOrder_Index.razor
@@ -176,6 +176,7 @@
                         <PropertyColumn Title="Requested By" Property="@(c => c.Name)" Sortable="true" />
                         <PropertyColumn Title="Nature of Request" Property="@(c => c.Nature_Of_Request)" />
                         <PropertyColumn Title="Division/Department" Property="@(c => c.Division_Department)" />
+                        <PropertyColumn Title="Business Unit" Property="@(c => c.BusinessUnitCode)" />
                         <TemplateColumn Title="Requested On" Width="140px" Sortable="true">
                             <div class="page__table-date">
                                 <span class="page__table-date-main">
