--- a/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/Modals/EditRequisition__Modal.razor
+++ b/SSDI.RequestMonitoring.UI/JComponents/Controls/Requests/Modals/EditRequisition__Modal.razor
@@ -20,6 +20,11 @@
             <Alert Message="@AlertMessage" Type="AlertType.error" ShowCloseButton="false" @bind-IsVisible="IsShowAlert" />
         </div>
 
-        <RequestRequisition__Form FormModel="@Model" OnValidSubmit="HandleSave" OnCloseModal="CloseModal" IsDisabledBtns="@_isDisabledBtns" IsForUpdate="true" />
+        <RequestRequisition__Form FormModel="@Model" 
+                                  OnValidSubmit="HandleSave" 
+                                  OnCloseModal="CloseModal" 
+                                  IsDisabledBtns="@_isDisabledBtns" 
+                                  IsForUpdate="true"
+                                  BusinessUnitCode="@RequestHeader?.BusinessUnitCode" />
     </div>
 </div>
