--- a/SSDI.RequestMonitoring.UI/wwwroot/css/modal/modal.css
+++ b/SSDI.RequestMonitoring.UI/wwwroot/css/modal/modal.css
@@ -81,6 +81,7 @@
     margin: 1px 1rem;
 }
 
+
 .form-group {
     display: flex;
     flex-direction: column;
@@ -432,6 +433,16 @@
     gap: 0.7rem;
 }
 
+.grid-three-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.7rem;
+}
+
+.full-width {
+    grid-column: 1 / -1;
+}
+
 /* bounce animation */
 @keyframes bounce {
     0%, 100% {
@@ -657,7 +668,7 @@
         max-height: 60vh !important;
     }
 
-    .modal__form-group, .grid-two-col {
+    .modal__form-group, .grid-two-col, .grid-three-col {
         grid-template-columns: 1fr; /* stack all */
     }
 }
